--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@ h1 {
 .tut-button:hover,.tryit-button:hover,.exercise-button:hover,#getdiploma a:hover {
   background: linear-gradient(93deg, #F6272A 9.61%, #FF0776 92.03%);
 
- !important;
-  color:white!important;
+
+  color:white !important;
 }
 
 .bar-item-hover:hover {
@@ -629,7 +629,7 @@ form.example::after {
 #listofsearchresults {
   display:none;
   position:absolute;
-  //border:1px solid #000;
+  border:1px solid #000;
   background-color:#282A35;
   background-color:#fff;
   color:#000;
@@ -807,7 +807,7 @@ body.darkpagetheme .icons-right  {
 <div id="top-nav-bar" class="classic">
   <div id="pagetop" class="w3-bar notranslate w3-white">
     <a id="custom-logo" href="../../images/w3schools_logo_436_2.png" class="w3-bar-item w3-button w3-left ga-top custom-logo" title="Home" style="width: 100px" aria-label="Home link">
-      <img src="../../images/w3schools_logo_436_2.png" alt="Custom Logo" style="width: 100%; height: auto;">
+      <img src="./images/w3schools_logo_436_2.png" alt="Custom Logo" style="width: 100%; height: auto;">
     </a>
 
     <nav class="tnb-desktop-nav w3-bar-item">
@@ -1108,7 +1108,7 @@ function setThemeMode() {
 }
 #darkmodemenu {
   position:fixed!important;
-  right:0;!important;  
+  right:0 !important;  
 }
 #subtopnav::-webkit-scrollbar {
   display:none!important;
