--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@ body.darkpagetheme .icons-right  {
 
 <div id="top-nav-bar" class="classic">
   <div id="pagetop" class="w3-bar notranslate w3-white">
-    <a id="custom-logo" href="#" class="w3-bar-item w3-button w3-left ga-top custom-logo" title="Home" style="width: 100px" aria-label="Home link">
+    <a id="custom-logo"  class="w3-bar-item w3-button w3-left ga-top custom-logo" title="Home" style="width: 100px" aria-label="Home link">
       <img src="./images/w3schools_logo_436_2.png" alt="Custom Logo" style="width: 100%; height: auto;">
     </a>
 
