--- a/index.html
+++ b/index.html
@@ -1527,10 +1527,10 @@ color:white">
   <br>
   <div class="w3-row-padding w3-content" style="max-width:1352px">
     <div class="w3-half">
-      <p><a class="w3-button ga-fp exercise-button w3-round ws-green" href="exercises/index.php/">Exercises</a></p>
+      <p><a class="w3-button ga-fp exercise-button w3-round ws-green" href="#">Exercises</a></p>
     </div>
     <div class="w3-half">
-      <p><a class="w3-button ga-fp exercise-button w3-round ws-yellow hover-yellow" href="quiztest/default.asp/">Quizzes</a></p>
+      <p><a class="w3-button ga-fp exercise-button w3-round ws-yellow hover-yellow" href="#">Quizzes</a></p>
     </div>
   </div><br>
 </div>
@@ -1764,7 +1764,7 @@ document.body.addEventListener("click", function(event) {
 
 </script>
 <div id="user-profile-bottom-wrapper" class="user-authenticated user-profile-bottom-wrapper w3-hide">
-  <a href="https://profile.w3schools.com/log-in?redirect_url=https%3A%2F%2Fmy-learning.w3schools.com" class="user-profile-btn ga-bottom ga-bottom-profile" title="Your W3Schools Profile" aria-label="Your W3Schools Profile" target="_top">
+  <a href="#" class="user-profile-btn ga-bottom ga-bottom-profile" title="Your W3Schools Profile" aria-label="Your W3Schools Profile" target="_top">
     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 2048 2048" class="user-profile-icon" aria-label="Your W3Schools Profile Icon">
       <path d="M 843.500 1148.155 C 837.450 1148.515, 823.050 1149.334, 811.500 1149.975 C 742.799 1153.788, 704.251 1162.996, 635.391 1192.044 C 517.544 1241.756, 398.992 1352.262, 337.200 1470 C 251.831 1632.658, 253.457 1816.879, 340.500 1843.982 C 351.574 1847.431, 1696.426 1847.431, 1707.500 1843.982 C 1794.543 1816.879, 1796.169 1632.658, 1710.800 1470 C 1649.008 1352.262, 1530.456 1241.756, 1412.609 1192.044 C 1344.588 1163.350, 1305.224 1153.854, 1238.500 1150.039 C 1190.330 1147.286, 1196.307 1147.328, 1097 1149.035 C 1039.984 1150.015, 1010.205 1150.008, 950 1149.003 C 851.731 1147.362, 856.213 1147.398, 843.500 1148.155" stroke="none" fill="#2a93fb" fill-rule="evenodd"/>
       <path d="M 1008 194.584 C 1006.075 194.809, 999.325 195.476, 993 196.064 C 927.768 202.134, 845.423 233.043, 786 273.762 C 691.987 338.184, 622.881 442.165, 601.082 552 C 588.496 615.414, 592.917 705.245, 611.329 760.230 C 643.220 855.469, 694.977 930.136, 763.195 979.321 C 810.333 1013.308, 839.747 1026.645, 913.697 1047.562 C 1010.275 1074.879, 1108.934 1065.290, 1221 1017.694 C 1259.787 1001.221, 1307.818 965.858, 1339.852 930.191 C 1460.375 795.998, 1488.781 609.032, 1412.581 451.500 C 1350.098 322.327, 1240.457 235.724, 1097.500 202.624 C 1072.356 196.802, 1025.206 192.566, 1008 194.584" stroke="none" fill="#0aaa8a" fill-rule="evenodd"/>
@@ -1976,7 +1976,7 @@ function secondSnigel() {};
 
 
 <div class="footersome">
-  <a target="_blank" href="#" title=" Facebook"><i class="fa">&#59398;</i></a>
+  <a target="_blank" href="https://kartikmehta.tech/" title=" Facebook"><i class="fa">&#59398;</i></a>
   <a target="_blank" href="#" title=" Discord"><i class="fa">&#59399;</i></a>
   <a target="_blank" href="#" title="LinkedIn"><i class="fa">&#62220;</i></a>
   <a target="_blank" href="#" title=" Instagram"><i class="fa">&#61805;</i></a>
@@ -1986,7 +1986,7 @@ function secondSnigel() {};
 
 <div class="footertext">
 
-<a href="#" class="ga-bottom">Copyright 2024</a>  All Rights Reserved.
+<a href="https://kartikmehta.tech/" class="ga-bottom">Copyright 2024</a>  All Rights Reserved.
 
 </div>
 </div>
@@ -2022,7 +2022,7 @@ function addMyLearnButt() {
       let myLearnButt = document.createElement("a");
       myLearnButt.innerHTML="Log in to track progress";
       myLearnButt.classList.add("w3-btn", "w3-hide-small", "myl-nav-butt");
-      myLearnButt.href="https://www.w3schools.com/signup/?utm_source=classic&utm_medium=" + subjectFolder + "_tutorial&utm_campaign=button_lower_navigation";
+      myLearnButt.href="#" + subjectFolder + "_tutorial&utm_campaign=button_lower_navigation";
       myLearnButt.setAttribute("title", "Sign Up and improve Your Learning Experience");
       myLearnButt.setAttribute("target", "_blank");
       nav[1].classList.add("w3-center");
