--- a/index.html
+++ b/index.html
@@ -1487,9 +1487,9 @@ entrypoint getBalance(address : address) : int = <br>
 
   </div>
    <div id="Frontend" class="proglang">
-      <video  style="width:100%;height:auto;display:block;border-bottom-left-radius:4px;border-bottom-right-radius:4px;" loading="lazy" alt="Frontend Code Editor">
-        <source src="0120 (5).mp4" type="video/mp4">
-      </video>
+     <img style="width:100%;height:auto;display:block;border-bottom-left-radius:4px;border-bottom-right-radius:4px;" src="./codeeditor.gif" alt="Frontend Code Editor"></img>
+
+    
       </div>
 
     </div><br>
