--- a/index.html
+++ b/index.html
@@ -1487,7 +1487,7 @@ entrypoint getBalance(address : address) : int = <br>
 
   </div>
    <div id="Frontend" class="proglang">
-     <img style="width:100%;height:auto;display:block;border-bottom-left-radius:4px;border-bottom-right-radius:4px;" src="./codeeditor.gif" alt="Frontend Code Editor"></img>
+     <img style="width:100%;height:auto;display:block;border-bottom-left-radius:4px;border-bottom-right-radius:4px;" src="./learn_sophia.gif" alt="Frontend Code Editor"></img>
 
     
       </div>
