--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="436">
 <meta property="og:image:height" content="228">
-<meta property="og:description" content="W3Schools offers free online tutorials, references and exercises in all the major languages of the web. Covering popular subjects like HTML, CSS, JavaScript, Python, SQL, Java, and many, many more.">
+<meta property="og:description" 
 <link rel="icon" href="favicon.ico">
 <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
